--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
   <head>
@@ -12,17 +11,37 @@
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
     <!---start LOUISEBOT-WIDGET code--->
-  <script type="text/javascript">
-    !(function () { function g() {
-      var script = document.createElement('script'), code = '2109831b-449d-4c25-90a5-69b408c277c0',url = 'https://cdn.1cdn.app/application/LB/23082315255659_LB_widget.js', l = localStorage.setItem('ps_widget' , code);
-      (script.type = 'text/javascript'),(script.async = !0),(script.src = url);
-      document.getElementsByTagName('head')[0].appendChild(script);
-    }
-    document.readyState === 'complete' ? g() : window.attachEvent ? window.attachEvent('onload', g)
-    : window.addEventListener('load', g, !1);
-    })();
+    <script type="text/javascript">
+      (function() {
+        function initWidget() {
+          try {
+            var script = document.createElement('script');
+            var code = '2109831b-449d-4c25-90a5-69b408c277c0';
+            var url = 'https://cdn.1cdn.app/application/LB/23082315255659_LB_widget.js';
+            
+            localStorage.setItem('ps_widget', code);
+            script.type = 'text/javascript';
+            script.async = true;
+            script.src = url;
+            
+            var head = document.head || document.getElementsByTagName('head')[0];
+            if (head) {
+              head.appendChild(script);
+            } else {
+              document.documentElement.appendChild(script);
+            }
+          } catch (e) {
+            console.error('Error loading LOUISEBOT widget:', e);
+          }
+        }
+
+        if (document.readyState === 'complete') {
+          initWidget();
+        } else {
+          window.addEventListener('load', initWidget);
+        }
+      })();
     </script>
     <!---end LOUISEBOT-WIDGET code--->
   </body>
-</html>
-
+</html> 
