--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-
 <!DOCTYPE html>
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Novativa - Agencia IA y de Automatización que acelera tu negocio</title>
     <!-- Meta Pixel Code -->
@@ -25,18 +24,6 @@
     <div id="root"></div>
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
-    <!---start LOUISEBOT-WIDGET code--->
-    <script type="text/javascript">
-      !(function () { function g() {
-        var script = document.createElement('script'), code = '2109831b-449d-4c25-90a5-69b408c277c0',url = 'https://cdn.1cdn.app/application/LB/23082315255659_LB_widget.js', l = localStorage.setItem('ps_widget' , code);
-        (script.type = 'text/javascript'),(script.async = !0),(script.src = url);
-        document.getElementsByTagName('head')[0].appendChild(script);
-      }
-      document.readyState === 'complete' ? g() : window.attachEvent ? window.attachEvent('onload', g)
-      : window.addEventListener('load', g, !1);
-      })();
-    </script>
-    <!---end LOUISEBOT-WIDGET code--->
     
     <!-- Meta Pixel Noscript -->
     <noscript>
@@ -44,6 +31,25 @@
         src="https://www.facebook.com/tr?id=686033903919176&ev=PageView&noscript=1"
       />
     </noscript>
+
+    <script>
+      !function() {
+        var t;
+        if (t = window.webbot = window.webbot = window.webbot || [], !t.init) return t.invoked ? void (window.console && console.error && console.error("Snippet included twice.")) : (
+          t.load = function(e) {
+            var o, n;
+            o = document.createElement("script");
+            e.type = "text/javscript";
+            o.async = !0;
+            o.crossorigin = "anonymous";
+            o.src = "https://chat.novativa.org/web-bot/script/frame/" + e + "/webbot.js";
+            n = document.getElementsByTagName("script")[0];
+            n.parentNode.insertBefore(o, n);
+          }
+        );
+      }();
+      webbot.load('kv4asBn2Ka7qE9NyzWLmnLF2hF8QPlHowY3PwHTn');
+    </script>
   </body>
 </html>
 
